# JobPilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.workbuddy/memory/: 2026-05-27.md
changelog/: 2026-05.md  2026-06.md
docs/: AI配置与调用流程.md  API_TEST_GUIDE.md  BUILD_SUMMARY.md  DELIVERY_SUMMARY.md  DMG_INSTALL_GUIDE.md  PRD.md  QUICK_START.md  TROUBLESHOOT_AI_CONFIG.md  V2-FEATURE-DESIGN.md  V2-IMPLEMENTATION-PLAN.md
docs/superpowers/specs/: 2026-05-02-jobpilot-design.md  2026-05-02-jobpilot-implementation.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  db.rs  error.rs  lib.rs  models.rs  scraper.rs
src-tauri/src/commands/: ai_config.rs  jobs.rs  mineru.rs  mod.rs  scrape.rs
src/app/: routes.tsx
src/app/api/: ai-config.ts  jobs.ts
src/app/components/: CompanyAvatar.tsx  Layout.tsx
src/app/pages/: AISettings.tsx  Dashboard.tsx  JobDetail.tsx  JobsList.tsx  NewJob.tsx  NotFound.tsx
src/styles/: globals.css  theme.css
